--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,15 +6,18 @@
     <string name="login">Login </string>
     <string name="username">Username</string>
     <string name="password">Password</string>
-    <string name="forgot_password">Forgot Password?</string>
+    <string name="forgot_password"><u>Forgot Password?</u></string>
     <string name="register">Do you have an account ?</string>
     <string name="registerr">Register</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="user_name">User Name</string>
-    <string name="email_id">Email Id</string>
+    <string name="email">Email</string>
     <string name="confirm_password">Confirm Password</string>
     <string name="already_have_an_account">Already have an account?</string>
     <string name="don_t_have_an_account">Don\'t have an account?</string>
     <string name="reset_password">Reset Password</string>
+    <string name="verify_reset_passwordd">Send email</string>
+    <string name="turn_back">Back</string>
+
 </resources>
